--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Mystery and detective stories'
 - !lcc 'PQ'
+- GITenberg
 title: La Grande Marnière
 url: http://www.gutenberg.org/ebooks/20950
